--- a/bootstrap_layout/src/main/resources/templates/index.html
+++ b/bootstrap_layout/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 	  layout:decorate="layout/default">
 	
 	<th:block layout:fragment="customTitle">
-		<title>index</title> 
+		<title>index 화면</title> 
 	</th:block>
 	<th:block layout:fragment="customContent">
 		<h1>bootStrap layout test</h1><br>
